plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'hexlet.code.App'
}

compileJava {
    options.release = 20
}

run {
    standardInput = System.in
}

